--- a/scss/parts/fab.scss
+++ b/scss/parts/fab.scss
@@ -3,7 +3,7 @@
 .fab {
   font-size: 1rem;
   display: flex;
-  position: absolute;
+  position: float;
   border: solid 1px $border;
   border-radius: 50%;
   padding: 18px;
