--- a/css/molecule.css
+++ b/css/molecule.css
@@ -832,7 +832,7 @@ body, h1, h2, h3, h4, h5, h6, span, p, input, textarea {
 .fab {
   font-size: 1rem;
   display: flex;
-  position: float;
+  position: fixed;
   border: solid 1px #d0d0d0;
   border-radius: 50%;
   padding: 18px;
