--- a/scss/parts/file.scss
+++ b/scss/parts/file.scss
@@ -1,6 +1,7 @@
 @import "../mixin/all";
 
 .file {
+  display: inline-flex;
   background-color: $light;
   border: 1px solid $border;
   padding: 8px 18px;
