--- a/scss/parts/fab.scss
+++ b/scss/parts/fab.scss
@@ -36,13 +36,13 @@
       display: none;
     }
   }
-  &.large {
+  &.size-large {
     padding: 20px;
     > * {
       font-size: 32px
     }
   }
-  &.small {
+  &.size-small {
     padding: 14px;
     > * {
       font-size: 18px
