--- a/docs/include/header.html
+++ b/docs/include/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header-contents">
     <div class="header-title">
-      <a href="{$root}/">
+      <a href="{$root}">
         <img src="{$root}static/logo/logo.svg" class="header-item header-logo">
       </a>
     </div>
