--- a/docs/include/footer.html
+++ b/docs/include/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <p class="footer-top-text">risuney is Japanese. So I can't English well. If you think the sentence is strange, please send me a <a href="https://twitter.com/tech_risuney">PM</a>.</p>
+  <p class="footer-top-text">risuney is Japanese. So I can't English well. If you think the sentence is strange, please <a href="https://twitter.com/MoleculeCSS">send me a Message</a>.</p>
   <nav class="nav">
     <div class="footer-column">
       <a href="{$root}overview" class="size-footer-text text-heading">Overview</a>
