--- a/docs/include/header.html
+++ b/docs/include/header.html
@@ -5,9 +5,15 @@
         <img src="{$root}static/logo/logo.svg" class="header-item header-logo">
       </a>
     </div>
-    <nav class="nav">
-      <a href="{$root}docs.html" class="header-item bg-header-item text-text size-4">Document</a>
-      <a href="{$root}overview/start.html" class="header-item bg-header-item text-text size-4">Start</a>
+    <nav class="nav nav-header">
+      <div class="nav-content">
+        <a href="{$root}docs.html" class="header-item bg-header-item text-text size-4">Document</a>
+        <a href="{$root}overview/start.html" class="header-item bg-header-item text-text size-4">Start</a>
+      </div>
+      <div class="nav-content">
+        <a href="https://twitter.com/MoleculeCSS" class="accounts"><img src="{$root}static/twitter-logo.svg" alt="Twitter"></a>
+        <a href="https://github.com/risuney/molecule-css" class="accounts"><img src="{$root}static/GitHub-Mark.png" alt="GitHub"></a>
+      </div>
     </nav>
   </div>
 </header>
