--- a/docs/include/header.html
+++ b/docs/include/header.html
@@ -11,8 +11,8 @@
         <a href="{$root}overview/start.html" class="header-item bg-header-item text-text size-4">Start</a>
       </div>
       <div class="nav-content">
-        <a href="https://twitter.com/MoleculeCSS" class="accounts"><img src="{$root}static/twitter-logo.svg" alt="Twitter"></a>
-        <a href="https://github.com/risuney/molecule-css" class="accounts"><img src="{$root}static/GitHub-Mark.png" alt="GitHub"></a>
+        <a href="https://twitter.com/MoleculeCSS" class="accounts" target="_blank" rel="noopener noreferrer"><img src="{$root}static/twitter-logo.svg" alt="Twitter"></a>
+        <a href="https://github.com/risuney/molecule-css" class="accounts" target="_blank" rel="noopener noreferrer"><img src="{$root}static/GitHub-Mark.png" alt="GitHub"></a>
       </div>
     </nav>
   </div>
