update: Add dropdown

--- a/docs/include/header.html
+++ b/docs/include/header.html
@@ -7,8 +7,8 @@
     </div>
     <nav class="nav nav-header">
       <div class="nav-content">
-        <a href="{$root}docs.html" class="header-item bg-header-item text-text size-4">Document</a>
-        <a href="{$root}overview/start.html" class="header-item bg-header-item text-text size-4">Start</a>
+        <a href="{$root}docs" class="header-item bg-header-item text-text size-4">Document</a>
+        <a href="{$root}overview/start" class="header-item bg-header-item text-text size-4">Start</a>
       </div>
       <div class="nav-content">
         <a href="https://twitter.com/MoleculeCSS" class="accounts" target="_blank" rel="noopener noreferrer"><img src="{$root}static/twitter-logo.svg" alt="Twitter"></a>
