--- a/css/molecule.css
+++ b/css/molecule.css
@@ -1,4 +1,4 @@
-/*! molecule.css v1.0.4 | MIT License */
+/*! molecule.css v1.0.5 | MIT License */
 html {
   box-sizing: border-box;
 }
@@ -76,7 +76,7 @@ input, button {
 }
 
 hr {
-  background-color: #e5e5e5;
+  background-color: #e4e5e6;
   border: none;
   display: block;
   height: 1px;
@@ -466,13 +466,14 @@ body, h1, h2, h3, h4, h5, h6, span, p, input, textarea {
 
 .header {
   width: 100%;
-  border-bottom: solid 1px #e5e5e5;
+  border-bottom: solid 1px #e4e5e6;
   background-color: #ffffff;
   padding: 16px 32px;
 }
 
 .header .header-contents {
   display: flex;
+  align-items: center;
 }
 
 .header .header-contents .header-title {
@@ -958,6 +959,38 @@ html.header-fixed, body.header-fixed {
   margin-right: 0;
 }
 
+.dropdown:focus-within .dropdown-menu, .dropdown.active .dropdown-menu, .dropdown.hover-active:hover .dropdown-menu {
+  display: flex;
+}
+
+.dropdown-menu {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  min-width: 170px;
+  border-radius: 8px;
+  padding: 8px 0;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.14);
+}
+
+.dropdown-menu.border .dropdown-item {
+  border-bottom: 1px solid #e4e5e6;
+}
+
+.dropdown-menu.border .dropdown-item:last-child {
+  border-bottom: none;
+  padding: 4px 24px;
+}
+
+.dropdown-item {
+  display: inline-flex;
+  padding: 2px 24px;
+}
+
+.dropdown-item:hover {
+  background-color: #f4f5f6;
+}
+
 .fab {
   font-size: 1rem;
   display: flex;
@@ -1425,7 +1458,7 @@ html.header-fixed, body.header-fixed {
 .table th, .table td {
   padding: 4px 24px;
   font-size: 1.15rem;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e4e5e6;
   vertical-align: middle;
 }
 
