--- a/docs/include/footer.html
+++ b/docs/include/footer.html
@@ -3,28 +3,29 @@
   <nav class="nav">
     <div class="footer-column">
       <a href="{$root}overview" class="size-footer-text text-heading">Overview</a>
-      <a href="{$root}overview/start.html" class="size-footer-text">Start</a>
-      <a href="{$root}overview/about.html" class="size-footer-text">About</a>
-      <a href="{$root}overview/text.html" class="size-footer-text">Text</a>
-      <a href="{$root}overview/colors.html" class="size-footer-text">Color</a>
+      <a href="{$root}overview/start" class="size-footer-text">Start</a>
+      <a href="{$root}overview/about" class="size-footer-text">About</a>
+      <a href="{$root}overview/text" class="size-footer-text">Text</a>
+      <a href="{$root}overview/colors" class="size-footer-text">Color</a>
     </div>
     <div class="footer-column">
       <a href="{$root}region" class="size-footer-text text-heading">Region</a>
-      <a href="{$root}region/header.html" class="size-footer-text">Header</a>
-      <a href="{$root}region/footer.html" class="size-footer-text">Footer</a>
-      <a href="{$root}region/hero.html" class="size-footer-text">Hero</a>
-      <a href="{$root}region/section.html" class="size-footer-text">Section</a>
+      <a href="{$root}region/header" class="size-footer-text">Header</a>
+      <a href="{$root}region/footer" class="size-footer-text">Footer</a>
+      <a href="{$root}region/hero" class="size-footer-text">Hero</a>
+      <a href="{$root}region/section" class="size-footer-text">Section</a>
     </div>
     <div class="footer-column">
       <a href="{$root}parts" class="size-footer-text text-heading">Parts</a>
-      <a href="{$root}parts/button.html" class="size-footer-text">Button</a>
-      <a href="{$root}parts/card.html" class="size-footer-text">Card</a>
-      <a href="{$root}parts/fab.html" class="size-footer-text">FAB</a>
-      <a href="{$root}parts/file.html" class="size-footer-text">File</a>
-      <a href="{$root}parts/input.html" class="size-footer-text">Input</a>
-      <a href="{$root}parts/textarea.html" class="size-footer-text">Textarea</a>
-      <a href="{$root}parts/modal.html" class="size-footer-text">Modal</a>
-      <a href="{$root}parts/table.html" class="size-footer-text">Table</a>
+      <a href="{$root}parts/button" class="size-footer-text">Button</a>
+      <a href="{$root}parts/card" class="size-footer-text">Card</a>
+      <a href="{$root}parts/dropdown" class="size-footer-text">Dropdown</a>
+      <a href="{$root}parts/fab" class="size-footer-text">FAB</a>
+      <a href="{$root}parts/file" class="size-footer-text">File</a>
+      <a href="{$root}parts/input" class="size-footer-text">Input</a>
+      <a href="{$root}parts/textarea" class="size-footer-text">Textarea</a>
+      <a href="{$root}parts/modal" class="size-footer-text">Modal</a>
+      <a href="{$root}parts/table" class="size-footer-text">Table</a>
     </div>
   </nav>
   <p class="size-footer-text footer-copy-right text-center">Copyright © 2021 risuney All rights reserved.</p>
