--- a/scss/region/header.scss
+++ b/scss/region/header.scss
@@ -7,6 +7,7 @@
   padding: 16px 32px;
   .header-contents {
     display: flex;
+    align-items: center;
     .header-title {
       display: flex;
       flex-shrink: 0;
