docs: modal-visual

--- a/docs/include/footer.html
+++ b/docs/include/footer.html
@@ -25,6 +25,7 @@
       <a href="{$root}parts/input" class="size-footer-text">Input</a>
       <a href="{$root}parts/textarea" class="size-footer-text">Textarea</a>
       <a href="{$root}parts/modal" class="size-footer-text">Modal</a>
+      <a href="{$root}parts/modal-visual" class="size-footer-text">Visual Modal</a>
       <a href="{$root}parts/table" class="size-footer-text">Table</a>
     </div>
   </nav>
