--- a/css/molecule.css
+++ b/css/molecule.css
@@ -167,11 +167,19 @@ body, h1, h2, h3, h4, h5, h6, span, p, input, textarea {
   color: #0cf79d;
 }
 
+.text-primary * {
+  color: #0cf79d;
+}
+
 .bg-sakura {
   background-color: #feeeed;
 }
 
 .text-sakura {
+  color: #feeeed;
+}
+
+.text-sakura * {
   color: #feeeed;
 }
 
@@ -183,11 +191,19 @@ body, h1, h2, h3, h4, h5, h6, span, p, input, textarea {
   color: #c22047;
 }
 
+.text-beni * {
+  color: #c22047;
+}
+
 .bg-orange {
   background-color: #ff8000;
 }
 
 .text-orange {
+  color: #ff8000;
+}
+
+.text-orange * {
   color: #ff8000;
 }
 
@@ -199,11 +215,19 @@ body, h1, h2, h3, h4, h5, h6, span, p, input, textarea {
   color: #1b5dc7;
 }
 
+.text-cobalt * {
+  color: #1b5dc7;
+}
+
 .bg-danger {
   background-color: #ff1717;
 }
 
 .text-danger {
+  color: #ff1717;
+}
+
+.text-danger * {
   color: #ff1717;
 }
 
@@ -215,11 +239,19 @@ body, h1, h2, h3, h4, h5, h6, span, p, input, textarea {
   color: #ffde7a;
 }
 
+.text-warning * {
+  color: #ffde7a;
+}
+
 .bg-purple {
   background-color: #c651e5;
 }
 
 .text-purple {
+  color: #c651e5;
+}
+
+.text-purple * {
   color: #c651e5;
 }
 
@@ -231,11 +263,19 @@ body, h1, h2, h3, h4, h5, h6, span, p, input, textarea {
   color: #2496f6;
 }
 
+.text-info * {
+  color: #2496f6;
+}
+
 .bg-white {
   background-color: #ffffff;
 }
 
 .text-white {
+  color: #ffffff;
+}
+
+.text-white * {
   color: #ffffff;
 }
 
@@ -247,11 +287,19 @@ body, h1, h2, h3, h4, h5, h6, span, p, input, textarea {
   color: #f4f5f6;
 }
 
+.text-light * {
+  color: #f4f5f6;
+}
+
 .bg-dark {
   background-color: #1e1e1e;
 }
 
 .text-dark {
+  color: #1e1e1e;
+}
+
+.text-dark * {
   color: #1e1e1e;
 }
 
@@ -263,11 +311,19 @@ body, h1, h2, h3, h4, h5, h6, span, p, input, textarea {
   color: #000000;
 }
 
+.text-black * {
+  color: #000000;
+}
+
 .bg-text {
   background-color: #5e5e5e;
 }
 
 .text-text {
+  color: #5e5e5e;
+}
+
+.text-text * {
   color: #5e5e5e;
 }
 
