--- a/scss/main/color.scss
+++ b/scss/main/color.scss
@@ -6,7 +6,10 @@
     background-color: $color
   }
   .text-#{$c-name} {
-    color: $color
+    color: $color;
+    & * {
+      color: $color
+    }
   }
 }
 
